compiler_py/grammar_bnf_td.txt
program   :: declList
declList  :: decl declList | E
decl      :: varDecl | funcDecl

varDecl       :: 'var' typeSpec varDeclId varDeclInit ';'
typeSpec      :: 'int' | 'bool' | 'char'
varDeclInit   :: '=' 'ID'(TODO: simpleExpr) | 'E'
varDeclId     :: 'ID' 

funcDecl     :: 'func' typeSpec ID '(' parms ')' stmt
parms        :: parmList | 'E'
parmsList    :: parmType parmsListN
parmsListN   :: 'E' | ',' parmType parmsListN
parmType     :: typeSpec ID

stmt         :: exprStmt | compoundStmt | returnStmt | 'E'
exprStmt     :: expr ';' | ';'
compoundStmt :: '{' stmtList '}' ';'
stmtList     :: stmt StmtList | 'E'
returnStmt   :: 'return' exprStmt

expr    :: 'ID' exprN
exprN   :: '=' operand | '++' | '--'
operand :: 'ID' | NUMCONST
